// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: PostComponent renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FEB027",
          "height": 630,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "width": 750,
        }
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "color": "#25282D",
              },
              Object {
                "fontFamily": "Poppins-SemiBold",
                "fontSize": 32,
                "fontStyle": "normal",
                "fontWeight": "600",
                "letterSpacing": 0.0015,
                "lineHeight": 48,
                "textAlign": "left",
              },
            ],
            Object {
              "color": "#FFFFFF",
              "fontSize": 32,
            },
          ]
        }
      >
        I'm a ninja turtle that is a teenager.
      </Text>
    </View>
  </View>
</View>
`;

exports[`component: PostComponent renders image posts 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Object {
                "height": 0,
                "width": 0,
              },
              undefined,
            ],
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          onFastImageLoad={[Function]}
          onFastImageLoadEnd={[Function]}
          onFastImageLoadStart={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://images.wallpapersden.com/image/download/minimal-abstract-2021-art_bGxla2aUmZqaraWkpJRmbmdlrWZlbWU.jpg",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`component: PostComponent renders textImage posts 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Object {
                "height": 0,
                "width": 0,
              },
              undefined,
            ],
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          onFastImageLoad={[Function]}
          onFastImageLoadEnd={[Function]}
          onFastImageLoadStart={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://images.wallpapersden.com/image/download/minimal-abstract-2021-art_bGxla2aUmZqaraWkpJRmbmdlrWZlbWU.jpg",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        style={
          Array [
            Array [
              Object {
                "color": "#25282D",
              },
              Object {
                "fontFamily": "Poppins-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "textAlign": "left",
              },
            ],
            Object {
              "margin": 16,
            },
          ]
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;
